<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/largeMargin"
        android:paddingBottom="@dimen/largeMargin">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regularMargin"
            android:src="@drawable/ic_print"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/SubtitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xxLargeMargin"
            android:layout_marginTop="@dimen/largeMargin"
            android:layout_marginEnd="@dimen/xxLargeMargin"
            android:text="@string/impressao_backup_sub_title"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/xxLargeMargin"
            android:layout_marginTop="@dimen/mediumMargin"
            android:layout_marginEnd="@dimen/xxLargeMargin"
            android:background="@color/dividerColor"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/sub"
            style="@style/BaseTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xxLargeMargin"
            android:layout_marginTop="@dimen/mediumMargin"
            android:layout_marginEnd="@dimen/xxLargeMargin"
            android:text="@string/impressao_sub"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/RoundedBorderedTextLeftButton"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/xLargeMargin"
            android:layout_marginTop="@dimen/xxLargeMargin"
            android:layout_marginEnd="@dimen/mediumMargin"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@id/btn_print"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sub" />

        <Button
            android:id="@+id/btn_print"
            style="@style/RoundedTextLeftButton"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/xLargeMargin"
            android:text="@string/yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintTop_toTopOf="@id/btn_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>